--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ serde = { version = "1.0", features = ["derive"], optional = true }
 [dev-dependencies]
 criterion = "0.3"
 procinfo = "0.4.2"
-failure = "0.1"
+anyhow = "1.0"
 
 [package.metadata.docs.rs]
 all-features = true
