--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -26,9 +26,9 @@ jobs:
       if: matrix.toolchain == '1.48.0'
       run: cargo update -p plotters --precise 0.3.1
     - name: Run tests
-      run: cargo +${{ matrix.toolchain }} test --verbose -- --skip _runsinglethread
+      run: cargo +${{ matrix.toolchain }} test --verbose -- --skip _runsinglethread --all-features
     - name: Run tests (single-threaded tests)
-      run: cargo +${{ matrix.toolchain }} test --verbose -- _runsinglethread --test-threads 1
+      run: cargo +${{ matrix.toolchain }} test --verbose -- _runsinglethread --test-threads 1 --all-features
 
     - name: Build docs (all features)
       run: cargo +${{ matrix.toolchain }} doc --all-features
@@ -58,7 +58,7 @@ jobs:
           target: i686-unknown-linux-gnu
 
       - name: cargo check (aarch64)
-        run: cargo +${{ matrix.toolchain }} check --target aarch64-linux-android
+        run: cargo +${{ matrix.toolchain }} check --target aarch64-linux-android --all-features
       - name: cargo check (i686)
-        run: cargo +${{ matrix.toolchain }} check --target i686-unknown-linux-gnu
+        run: cargo +${{ matrix.toolchain }} check --target i686-unknown-linux-gnu --all-features
 
