--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -25,6 +25,9 @@ jobs:
     - name: Pin plotters
       if: matrix.toolchain == '1.48.0'
       run: cargo update -p plotters --precise 0.3.1
+    - name: Pin once_cell
+      if: matrix.toolchain == '1.48.0'
+      run: cargo update -p once_cell --precise 1.14.0
     - name: Run tests
       run: cargo +${{ matrix.toolchain }} test --all-features --verbose -- --skip _runsinglethread
     - name: Run tests (single-threaded tests)
@@ -57,6 +60,9 @@ jobs:
           toolchain: ${{ matrix.toolchain }}
           target: i686-unknown-linux-gnu
 
+      - name: Pin once_cell
+        if: matrix.toolchain == '1.48.0'
+        run: cargo update -p once_cell --precise 1.14.0
       - name: cargo check (aarch64)
         run: cargo +${{ matrix.toolchain }} check --target aarch64-linux-android --all-features
       - name: cargo check (i686)
